--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.37.1
+streamlit
 torch
-transformers
+transformers>=4.38,<4.41
 sentencepiece
 accelerate
 peft
-sacremoses
+safetensors
